# ai-assistant

./: .gitignore  2gis_check.py  README.md  bot.py  checker.py  db.sqlite3  main.py  manage.py  pyproject.toml  recquest.py  requirements.txt  setup.py  state_machine.py  storage.py  test.py  text.py  voice.py
backbot/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backbot/templates/backbot/: successful_reg.html  unsuccessful_reg.html
decription/: text.py  voice.py
records/: models.py  urls.py  views.py
records/migrations/: 0001_initial.py  0002_record_address.py  0003_alter_record_location_x_alter_record_location_y.py  0004_alter_record_datetime.py  0005_token.py  0006_record_calendar_id.py  0007_alter_record_calendar_id.py
state_handlers/: add_event.py  choose_event.py  choose_event_for_delete.py  edit_data.py  greetings.py  idle.py  live_location.py  reserve_handler.py  setup_end.py  show_all_events.py  view_event.py  view_event_data.py  view_events.py
