[project]
name = "hitshack"
version = "0.1.0"
description = ""
authors = [
    {name = "Trebias",email = "unitsss11@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django (>=5.2.3,<6.0.0)",
    "python-telegram-bot (>=22.1,<23.0)",
    "requests (>=2.32.4,<3.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
